--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@ h1 {
   margin: 0 15%;
 }
 
+@media only screen and (max-width: 720px) {
+  .container {
+    margin: 0;
+  }
+}
+
 .input {
   width: 100%;
   padding: 4px 10px;
